Generalizes modal component and derives open state from currently editing user. Adds basic user form

--- a/client/src/components/UserManager/styles.scss
+++ b/client/src/components/UserManager/styles.scss
@@ -1,11 +1,11 @@
 .user-manager {
   height: 100%;
   background-color: #F8F8F8;
+  padding-top: 183px;
 
   & > .inner-container {
-    max-width: 1800px;
+    max-width: 1328px;
     margin: 0 auto;
-    padding: 183px 236px;
   }
 
   .top-bar {
