--- a/client/src/components/UserLocation/styles.scss
+++ b/client/src/components/UserLocation/styles.scss
@@ -1,10 +1,6 @@
 .map-container {
-  display: flex;
-  justify-content: center;
-  padding: 1rem;
-
-  &__map {
-    height: 60vh;
-    width: 100%;
-  }
+  height: 336px;
+  width: 518px;
+  border-radius: 8px;
+  position: relative;
 }
