--- a/client/src/components/UserManager/styles.scss
+++ b/client/src/components/UserManager/styles.scss
@@ -47,6 +47,30 @@
     // color: rgba(0, 0, 0, 0.4);
   }
 
+  .bottom-bar {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 64px;
+    padding-bottom: 64px;
+
+    .load-more {
+      height: 90px;
+      width: 280px;
+      border-radius: 8px;
+      background: #FFFFFF;
+      border: 4px solid rgba(0, 0, 0, 0.1);
+      box-sizing: border-box;
+      border-radius: 8px;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 30px;
+      letter-spacing: 0px;
+      text-align: center;
+      text-transform: uppercase;
+    }
+  }
+
   .edit-container {
     .inner-container {
       display: flex;
