--- a/client/src/components/UserManager/styles.scss
+++ b/client/src/components/UserManager/styles.scss
@@ -2,6 +2,42 @@
   background-color: #F8F8F8;
   padding-top: 183px;
 
+  input:not([type="submit"]) {
+    background: #FFFFFF;
+    width: 400px;
+    height: 64px;
+    padding: 0 16px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 30px;
+    font-weight: 300;
+    ::placeholder {
+      font-weight: 300px;
+    }
+  }
+
+  button, input[type="submit"] {
+    height: 90px;
+    width: 280px;
+    border-radius: 8px;
+    background: #FFFFFF;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+
   & > .inner-container {
     max-width: 1328px;
     margin: 0 auto;
@@ -17,23 +53,6 @@
         display: inline;
         font-size: 48px;
         margin: 0;
-      }
-      input {
-        background: #FFFFFF;
-        width: 400px;
-        height: 64px;
-        padding: 0 16px;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        font-family: 'Source Sans Pro';
-        font-style: normal;
-        font-size: 24px;
-        font-weight: 300;
-        line-height: 30px;
-        font-weight: 300;
-        ::placeholder {
-          font-weight: 300px;
-        }
       }
     }
   }
@@ -52,23 +71,6 @@
     justify-content: space-around;
     margin-top: 64px;
     padding-bottom: 64px;
-
-    .load-more {
-      height: 90px;
-      width: 280px;
-      border-radius: 8px;
-      background: #FFFFFF;
-      border: 4px solid rgba(0, 0, 0, 0.1);
-      box-sizing: border-box;
-      border-radius: 8px;
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 30px;
-      letter-spacing: 0px;
-      text-align: center;
-      text-transform: uppercase;
-    }
   }
 
   .edit-container {
