Adds end-to-end tests

--- a/client/src/components/UserManager/styles.scss
+++ b/client/src/components/UserManager/styles.scss
@@ -1,6 +1,7 @@
 .user-manager {
   background-color: #F8F8F8;
   padding-top: 183px;
+  min-height: 100%;
 
   input:not([type="submit"]) {
     background: #FFFFFF;
